Fix CSV export filter issues
- Apply OpenRewrite suggestions
- Add missing fields Chapter and Annote to header
- Apply ReplaceWithEscapedDoubleQuotes to all fields
- Add execution lock annotations to test class
- Add citation key assertion and quote escaping tests